# easy-boulder-finder

./: .gitignore  README.md  main.py  model_demo.py  model_versioning.py  predict.py  pyproject.toml  pyrightconfig.json  requirements.txt  train.py  upload_model.py  utils.py
