[project]
name = "easy-boulder-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boardlib>=0.10.1",
    "huggingface-hub>=0.28.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.49.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
reportMissingImports = true
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedClass = true
reportGeneralTypeIssues = true
